testsuite/tests/arrows/should_fail/T5380.stderr

T5380.hs:7:27: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘not_bool’
      ‘not_bool’ is a rigid type variable bound by
        the type signature for:
          testB :: forall not_bool not_unit.
                   not_bool -> (() -> ()) -> () -> not_unit
        at T5380.hs:6:1-49
    • In the expression: b
      In the expression: proc () -> if b then f -< () else f -< ()
      In an equation for ‘testB’:
          testB b f = proc () -> if b then f -< () else f -< ()
    • Relevant bindings include
        b :: not_bool (bound at T5380.hs:7:7)
        testB :: not_bool -> (() -> ()) -> () -> not_unit
          (bound at T5380.hs:7:1)

T5380.hs:7:34: error:
    • Couldn't match type ‘not_unit’ with ‘()’
      ‘not_unit’ is a rigid type variable bound by
        the type signature for:
          testB :: forall not_bool not_unit.
                   not_bool -> (() -> ()) -> () -> not_unit
        at T5380.hs:6:1-49
      Expected type: () -> not_unit
        Actual type: () -> ()
    • In the expression: f
      In the command: f -< ()
      In the expression: proc () -> if b then f -< () else f -< ()
    • Relevant bindings include
        testB :: not_bool -> (() -> ()) -> () -> not_unit
          (bound at T5380.hs:7:1)
